# progressive_plots

./: benchmark.py  first_try.py  main.py  mean_pool.py  pyproject.toml  usage_example.py
examples/: usage_example.py
src/ProgressivePlots/: main.py
tests/: _test.py
