[tool.poetry]
name = "ProgressivePlots"
version = "0.1.0"
description = ""
authors = ["Nikolay Strekopytov <nstrekopytov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.7"
matplotlib = "^3.7.0"
numpy = "^1.24.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
